<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Sagittarius</string>

	<string name="closeActivity">Stäng</string>
	<string name="competitor">Skytt</string>
	<string name="enter_scores">Registrera resultat</string>
	<string name="label_hits">Träff</string>
	<string name="label_targets">Figurer</string>
	<string name="label_points">Poäng</string>
	<string name="next_competitor">Nästa deltagare</string>
	<string name="next_stage">Nästa station</string>
	<string name="review_scores">Visa resultat</string>
	<string name="scores_title">Resultat</string>
	<string name="stage">Station</string>
	<string name="upload_scores">Rapportera resultat</string>

	<string name="message_no_competitors">Patrullen har inga deltagare</string>
	<string name="message_no_squads">Tavlingen har inga patruller</string>

	<string name="error_reporting_message_hint">Information</string>

	<string name="url_base_main">http://projects.smilfinken.net/sagittarius-main</string>
	<string name="url_base_dev">http://192.168.101.130:9000</string>
	<string name="url_base">http://projects.smilfinken.net/sagittarius-main</string>
	<string name="url_loginform">/login</string>
	<string name="url_competitionlist">/competitions/listasxml</string>
	<string name="url_competitorlist">/competitors/listasxml</string>
	<string name="url_squadlist">/squads/listasxml</string>
	<string name="url_stagelist">/stages/listasxml</string>
	<string name="url_upload">/results/uploadxml</string>
	<string name="username">per@pelle.se</string>
	<string name="password">123</string>
</resources>