<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="match_parent"
				android:layout_height="match_parent" >
	<TextView android:id="@+id/stage_title"
			  android:layout_alignParentTop="true"
			  android:layout_width="match_parent"
			  android:layout_height="wrap_content"
			  android:textSize="18dp"
			  android:text="@string/stage_title" />
	<TextView android:id="@+id/competitor"
			  android:layout_below="@id/stage_title"
			  android:layout_width="match_parent"
			  android:layout_height="wrap_content"
			  android:textSize="24dp"
			  android:text="@string/competitor" />
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
					android:orientation="horizontal"
					android:layout_centerInParent="true"
					android:layout_below="@id/competitor"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" >
		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
						android:id="@+id/container_hits"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" >
			<TextView android:id="@+id/label_hits"
					  android:layout_centerHorizontal="true"
					  android:layout_width="wrap_content"
					  android:layout_height="wrap_content"
					  android:textSize="18dp"
					  android:text="@string/label_hits" />
			<NumberPicker android:id="@+id/score_hits"
						  android:layout_below="@id/label_hits"
						  android:layout_centerHorizontal="true"
						  android:layout_width="wrap_content"
						  android:layout_height="wrap_content" />
			<SeekBar android:id="@+id/seek_hits"
					 android:layout_centerHorizontal="true"
					 android:layout_below="@id/score_hits"
					 android:layout_width="60dp"
					 android:layout_height="wrap_content" />
		</RelativeLayout>
		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
						android:id="@+id/container_targets"
						android:layout_toRightOf="@id/container_hits"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" >
			<TextView android:id="@+id/label_targets"
					  android:layout_centerHorizontal="true"
					  android:layout_width="wrap_content"
					  android:layout_height="wrap_content"
					  android:textSize="18dp"
					  android:text="@string/label_targets" />
			<NumberPicker android:id="@+id/score_targets"
						  android:layout_below="@id/label_targets"
						  android:layout_centerHorizontal="true"
						  android:layout_width="wrap_content"
						  android:layout_height="wrap_content" />
			<SeekBar android:id="@+id/seek_targets"
					 android:layout_centerHorizontal="true"
					 android:layout_below="@id/score_targets"
					 android:layout_width="60dp"
					 android:layout_height="wrap_content" />
		</RelativeLayout>
		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
						android:id="@+id/container_points"
						android:layout_toRightOf="@id/container_targets"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" >
			<TextView android:id="@+id/label_points"
					  android:layout_centerHorizontal="true"
					  android:layout_width="wrap_content"
					  android:layout_height="wrap_content"
					  android:textSize="18dp"
					  android:text="@string/label_points" />
			<NumberPicker android:id="@+id/score_points"
						  android:layout_centerHorizontal="true"
						  android:layout_below="@id/label_points"
						  android:layout_width="wrap_content"
						  android:layout_height="wrap_content" />
			<SeekBar android:id="@+id/seek_points"
					 android:layout_centerHorizontal="true"
					 android:layout_below="@id/score_points"
					 android:layout_width="60dp"
					 android:layout_height="wrap_content" />
		</RelativeLayout>
	</RelativeLayout>
	<Button android:id="@+id/next_competitor"
			android:layout_alignParentBottom="true"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:onClick="nextCompetitor"
			android:text="@string/next_competitor" />
</RelativeLayout>